--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 body {
-  background-color: black;
-  color: blue;
+  background-color: blue;
+  color: black;
 }
 
 h1 {
@@ -20,4 +20,9 @@ h1 {
   color: black;
   text-decoration: none;
   margin: 0 10px;
+}
+
+.city-button:hover {
+  color: black;
+  background-color: #f2f2f2;
 }
